# Lecuture-AGI-Project

./: .gitignore  LLM  Process_Notes.md  README.md  RESTRUCTURE_SUMMARY.md  Release-Notes.md  environment.yml  findings.md  findings_nonogram.md  program.md  program_fallback.md  program_run2.md  program_run3.md  pyproject.toml  results.tsv  run.sh  run.txt
.claude/: settings.json
LLAMA/: download.py
LLM/: download.py  download_all.py
context/: research context.md  sliding_puzzle_flow.md
docs/: AUTORESEARCH.md  GitHub_Actions_Runner_Setup.md  dev_verification.md  gpu_debugging.md  slurm-ci-pipeline.md
findings/: nonogram.md  rubiks_cube.md  sliding_puzzle.md  sudoku.md  tower_of_hanoi.md
notebooks/: analysis.ipynb  analyze_autoresearch.ipynb  sliding_puzzle_verify.ipynb  test_autoresearch.ipynb  test_cluster_claude.ipynb  test_sr.ipynb
output/: debug_prompts.md  log.csv  process.txt  valid_moves.csv
results/: nonogram.tsv  rubiks_cube.tsv  sliding_puzzle.tsv  sudoku.tsv  tower_of_hanoi.tsv
scripts/: autoresearch.py  dev.sh  run.sh  run_autoresearch.sh  run_autoresearch_dev.sh  run_autoresearch_run2.sh  run_autoresearch_run3.sh  run_autoresearch_run3_dev.sh  run_autoresearch_run3_full.sh  smoke_test.sh
src/: README.md  main.py  run_sliding_puzzle.py  run_tower_of_hanoi.py  test_structure.py
tests/: test_api.py  test_cycle_detection.py  test_fallback.py  test_main_voting.py  test_nonogram_environment.py  test_parser.py  test_sliding_puzzle.py  test_sudoku.py  test_tower_of_hanoi.py
tower_of_hanoi/: decomposer.py  enviroment.py  llm.py  main.py  (+2 more)
(+414 files in other folders)
