[project]
name = "continuous-learning-exploration"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "accelerate>=1.12.0",
    "llama-stack>=0.3.3",
    "matplotlib>=3.10.7",
    "torch>=2.9.1",
    "transformers>=4.57.3",
]
