[project]
name = "lecture_agi_project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "accelerate>=1.12.0",
    "aiohttp>=3.11.0",
    "google-genai>=1.0.0",
    "llama-stack>=0.3.3",
    "matplotlib>=3.10.7",
    "pyyaml>=6.0.3",
    "torch>=2.9.1",
    "transformers @ git+https://github.com/huggingface/transformers.git",
    "wandb>=0.19.0",
    "weave>=0.52.31",
]


